Add OpenJDK role

--- a/playbooks/local.yml
+++ b/playbooks/local.yml
@@ -8,3 +8,7 @@
     - name: Require host OS to be macOS
       ansible.builtin.import_tasks: tasks/macos-guard.yml
       tags: always
+
+  roles:
+
+    - openjdk
