--- a/roles/iterm2/tasks/main.yml
+++ b/roles/iterm2/tasks/main.yml
@@ -6,13 +6,13 @@
 
 - name: Ensure preference directory exist
   ansible.builtin.file:
-    path: "{{ ansible_user_dir }}/.config/iterm2/preferences"
+    path: ~/.config/iterm2/preferences
     state: directory
     mode: '0755'
 
 - name: Link preferences
   ansible.builtin.copy:
     src: com.googlecode.iterm2.plist
-    dest: "{{ ansible_user_dir }}/.config/iterm2/preferences/com.googlecode.iterm2.plist"
+    dest: ~/.config/iterm2/preferences/com.googlecode.iterm2.plist
     state: link
     mode: '0640'
