--- a/roles/maven/tasks/main.yml
+++ b/roles/maven/tasks/main.yml
@@ -6,12 +6,12 @@
 
 - name: Ensure .m2/ directory exist
   ansible.builtin.file:
-    path: "{{ ansible_user_dir }}/.m2"
+    path: ~/.m2
     state: directory
     mode: '0755'
 
 - name: Link Maven configuration
   ansible.builtin.template:
     src: settings.xml
-    dest: "{{ ansible_user_dir }}/.m2/settings.xml"
+    dest: ~/.m2/settings.xml
     mode: '0600'
