--- a/roles/hcloud/tasks/main.yml
+++ b/roles/hcloud/tasks/main.yml
@@ -31,6 +31,7 @@
         owner: "{{ ansible_user_id }}"
         group: staff
         mode: '0644'
+      when: not ansible_check_mode
 
 - name: Add initialization statement
   tags: hetzner, hcloud
