--- a/roles/hcloud/tasks/main.yml
+++ b/roles/hcloud/tasks/main.yml
@@ -32,12 +32,5 @@
         group: staff
         mode: '0644'
       when: not ansible_check_mode
-
-- name: Add initialization statement
-  tags: hetzner, hcloud
-  ansible.builtin.lineinfile:
-    path: ~/.zshrc
-    value: fpath+=(${HOME}/.config/hcloud/completion/zsh)
-    insertbefore: ^source \$ZSH/oh-my-zsh.sh$
-    firstmatch: true
-    state: present
+      notify:
+        - application completion installed
