Require explicit zshrc replacement

--- a/roles/oh-my-zsh/tasks/main.yml
+++ b/roles/oh-my-zsh/tasks/main.yml
@@ -12,6 +12,7 @@
     version: master
 
 - name: Render configuration
+  tags: never
   ansible.builtin.template:
     src: zshrc.j2
     dest: ~/.zshrc
