Re-link openjdk binaries when packages update

--- a/playbooks/local.yml
+++ b/playbooks/local.yml
@@ -16,7 +16,8 @@
         upgrade_all: true
         upgrade_options: ignore-pinned
       when: not ansible_check_mode
-      changed_when: false
+      notify:
+        - hombrew packages upgraded
 
     - name: Upgrade all Homebrew casks
       community.general.homebrew_cask:
