--- a/roles/openjdk/handlers/main.yml
+++ b/roles/openjdk/handlers/main.yml
@@ -1,4 +1,19 @@
 ---
+- name: Link JDKs for system wrapper
+  become: true
+  ansible.builtin.file:
+    src: "{{ item.src }}"
+    dest: "{{ item.dest }}"
+    state: link
+    force: true
+  loop:
+    - { src: /opt/homebrew/opt/openjdk@11/libexec/openjdk.jdk, dest: /Library/Java/JavaVirtualMachines/openjdk-11.jdk }
+    - { src: /opt/homebrew/opt/openjdk@17/libexec/openjdk.jdk, dest: /Library/Java/JavaVirtualMachines/openjdk-17.jdk }
+    - { src: /opt/homebrew/opt/openjdk/libexec/openjdk.jdk, dest: /Library/Java/JavaVirtualMachines/openjdk.jdk }
+  listen:
+    - hombrew packages upgraded
+    - openjdk package installed
+
 - name: Export java home
   ansible.builtin.lineinfile:
     path: ~/.zshrc
