Add ssh-agent tasks

--- a/roles/oh-my-zsh/handlers/main.yml
+++ b/roles/oh-my-zsh/handlers/main.yml
@@ -15,3 +15,11 @@
   tags: legacy
   listen:
     - shell configuration replaced
+
+- name: Import ssh-agent shell configuration
+  ansible.builtin.include_tasks:
+    file: ssh-agent.yml
+    apply:
+      tags: always
+  listen:
+    - shell configuration replaced
