--- a/roles/openjdk/tasks/main.yml
+++ b/roles/openjdk/tasks/main.yml
@@ -6,5 +6,5 @@
       - openjdk@17
       - openjdk
   notify:
-    - commandline programm installed
+    - commandline program installed
     - openjdk package installed
