--- a/roles/iterm2/files/com.googlecode.iterm2.plist
+++ b/roles/iterm2/files/com.googlecode.iterm2.plist
@@ -1035,7 +1035,7 @@
 			<key>Blinking Cursor</key>
 			<false/>
 			<key>Blur</key>
-			<true/>
+			<false/>
 			<key>Blur Radius</key>
 			<real>20</real>
 			<key>Bold Color</key>
@@ -1721,6 +1721,8 @@
 			<true/>
 			<key>Normal Font</key>
 			<string>Monaco 14</string>
+			<key>Only The Default BG Color Uses Transparency</key>
+			<false/>
 			<key>Option Key Sends</key>
 			<integer>0</integer>
 			<key>Prompt Before Closing 2</key>
@@ -1808,7 +1810,7 @@
 			<key>Terminal Type</key>
 			<string>xterm-256color</string>
 			<key>Transparency</key>
-			<real>0.10000000000000001</real>
+			<real>0.0</real>
 			<key>Unlimited Scrollback</key>
 			<false/>
 			<key>Use Bold Font</key>
