--- a/roles/storagebox/tasks/main.yml
+++ b/roles/storagebox/tasks/main.yml
@@ -15,15 +15,15 @@
 - name: Render mount credentials
   ansible.builtin.template:
     src: cifs_credentials.j2
-    dest: "{{ cifs_credentials_path }}"
+    dest: "{{ storagebox_cifs_credentials_path }}"
     owner: root
     group: root
     mode: '0600'
 
 - name: Mount Storage Box volume
   ansible.posix.mount:
-    src: "//{{ storagebox_account_username }}.your-storagebox.de/{{ cifs_share }}"
-    path: "{{ cifs_mountpoint }}"
-    opts: "{{ cifs_mount_options | join(',') }}"
+    src: "//{{ storagebox_account_username }}.your-storagebox.de/{{ storagebox_cifs_share }}"
+    path: "{{ storagebox_cifs_mountpoint }}"
+    opts: "{{ storagebox_cifs_mount_options | join(',') }}"
     fstype: cifs
     state: mounted
